--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+#td4-emu = {path = "../td4-emu"}
+td4-emu = {git = "https://github.com/katakanan/td4-emu"}
+
+iced ={version= "0.3.0", features = ["smol"]}
